# G4SolenoidSuperFRS

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  G4SolenoidSimple.cc  G4SolenoidSimple.in  README.md  gui.mac  run1.mac  run2.mac  runData.C  runTemplate.mac  testconfig.par  vis.mac
WasaGeoRoot/: geometry.C  geometry2.C  geometryVolEMC.C  geometryVolFW.C  geometryVolume.C  geometry_original.C
cmake/: FindROOT.cmake
include/: G4SolActionInitialization.hh  G4SolConfig.hh  G4SolConvertGeo.hh  G4SolEventAction.hh  G4SolGeometryController.hh  G4SolHit.hh  G4SolRunAction.hh  G4SolRunData.hh  G4SolSensitiveD.hh  G4SolSimpleActionInitialization.hh  G4SolSimpleMagneticField.hh  G4SolSimplePrimaryGeneratorAction.hh  G4SolStackingAction.hh  G4SolVDetectorConstruction.hh  G4SolWASAMapMagneticField.hh  HIAFSimpleDetectorConstruction.hh  HypHIPrimaryGeneratorAction.hh  HypernuclearPhysics.hh  KnuclDetectorConstruction.hh  MField.hh  TG4Sol_Event.hh  TG4Sol_Hit.hh  TG4Sol_LinkDef.h  TH3L.hh  TH4L.hh  THe4L.hh  THe5L.hh  TTritonStar.hh  TnnL.hh  WasaDetectorConstruction.hh  WasaFullRootConstruction.hh  WasaSimpleDetectorConstruction.hh
src/: G4SolActionInitialization.cc  G4SolConfig.cc  G4SolConvertGeo.cc  G4SolEventAction.cc  G4SolGeometryController.cc  G4SolHit.cc  G4SolRunAction.cc  G4SolRunData.cc  G4SolSensitiveD.cc  G4SolSimpleActionInitialization.cc  G4SolSimpleMagneticField.cc  G4SolSimplePrimaryGeneratorAction.cc  G4SolStackingAction.cc  G4SolVDetectorConstruction.cc  G4SolWASAMapMagneticField.cc  HIAFSimpleDetectorConstruction.cc  HypHIPrimaryGeneratorAction.cc  HypernuclearPhysics.cc  KnuclDetectorConstruction.cc  MField.cc  TG4Sol_Event.cc  TG4Sol_Hit.cc  TH3L.cc  TH4L.cc  THe4L.cc  THe5L.cc  TTritonStar.cc  TnnL.cc  WasaDetectorConstruction.cc  WasaFullRootConstruction.cc  WasaSimpleDetectorConstruction.cc
